--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Sab<span>In</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -39,7 +39,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
+                <div class="text-1">Hello,</div>
                 <div class="text-2">Sabin Kshetri</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Hire me</a>
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile-11.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Sabin and I'm a <span class="typing-2"></span></div>
@@ -157,43 +157,43 @@
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">XXX</div>
-                        <p>Comming Soon</p>
+                        <img src="images/logo.png" alt="">
+                        <div class="text">Erastriya.com</div>
+                        <p><a href="https://www.erastriya.com/">Click Here... </a></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">XXX</div>
-                        <p>Comming Soon</p>
+                        <img src="images/cart.jpg" alt="">
+                        <div class="text">Add-To-Cart App</div>
+                        <p><a href="https://github.com/SabinKshetri/ADD-TO-CART-APP">Click Here...</a></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">XXX</div>
-                        <p>Comming Soon</p>
+                        <img src="images/biddng.png" alt="">
+                        <div class="text">AgroBidding</div>
+                        <p><a href="https://github.com/SabinKshetri/Agrobidding">Click Here..</a></p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">XXX</div>
-                        <p>Comming Soon</p>
+                        <img src="images/videocalling.jpg" alt="">
+                        <div class="text">VideoCalling App</div>
+                        <p><a href="https://github.com/SabinKshetri/VideoCalling_App">Click Here...</a></p>
                     </div>
                 </div>
-                <div class="card">
+              <!--   <div class="card">
                     <div class="box">
                         <img src="images/profile-5.jpeg" alt="">
                         <div class="text">XXX</div>
                         <p>Comming Soon</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
